syntax = "proto3";

package ruek.api.v1;

import "google/protobuf/struct.proto";

service Principals {
	rpc Create(PrincipalsCreateRequest) returns (PrincipalsCreateResponse);
	rpc Delete(PrincipalsDeleteRequest) returns (PrincipalsDeleteResponse);
	rpc List(PrincipalsListRequest) returns (PrincipalsListResponse);
	rpc Retrieve(PrincipalsRetrieveRequest) returns (PrincipalsRetrieveResponse);
	rpc Update(PrincipalsUpdateRequest) returns (PrincipalsUpdateResponse);
}

message Principal {
	string id = 1;

	optional google.protobuf.Struct attrs   = 2;
	optional string                 segment = 3;
}

message PrincipalsCreateRequest {
	optional string id = 1;

	optional google.protobuf.Struct attrs   = 2;
	optional string                 segment = 3;
}

message PrincipalsCreateResponse {
	Principal principal = 1;
}

message PrincipalsDeleteRequest {
	string id = 1;
}

message PrincipalsDeleteResponse {}

message PrincipalsListRequest {
	optional string segment = 1;

	optional uint32 pagination_limit = 2;
	optional string pagination_token = 3;
}

message PrincipalsListResponse {
	repeated Principal principals = 1;

	optional string pagination_token = 2;
}

message PrincipalsRetrieveRequest {
	string id = 1;
}

message PrincipalsRetrieveResponse {
	Principal principal = 1;
}

message PrincipalsUpdateRequest {
	string id = 1;

	optional google.protobuf.Struct attrs   = 2;
	optional string                 segment = 3;
}

message PrincipalsUpdateResponse {
	Principal principal = 1;
}
